 - Garmin FIT parser: provides heartrate zones information and times within
   these zones (if available)
   - newer Garmin devices (e.g. Garmin Forerunner 645, Garmin Fenix 5,
     Garmin Edge 530 and later) provide all the data
   - older Garmin devices (e.g. Garmin Forerunner 520 or 820, Suunto Spartan)
     provide only the time in the heartrate zones, not the zone boundaries
 Project changes:

v7.8.0:
 SportsTracker changes:
 - Equipment Usage: added a new dialog which displays the usages of each
   equipment for a selected sport type
   - the usage contains the total distance, duration and dates of first and
     last usage
   - Dialog can be started from the Tools menu
 - Exercise Dialog: an info message is shown when the user wants to store an
   exercise without a selected equipment (is often forgotten)
   - not shown when there is no equipment list for the selected sport type
 - SQLite Export: column DATE_TIME in table EXERCISE is now of type Integer,
   the previous type Text has caused problems in queries (e.g. sorting)
 - updated to JavaFX / OpenJFX 16
   - provides improved macOS 10.15 / 11 support and several bugfixes
 - updated ControlsFX to version 11.1.0
 - updated Kotlin to version 1.4.31
 - updated packaging of native installer creation for macOS, Windows and Linux
   - now uses jpackage introduced with JDK 14 (JEP 343)
   - jpackager-backports and workarounds are not needed anymore
   - created packages are smaller now
 - Statistics Dialog: improved naming for Totals, Minimums, Averages, Maximums
   - singular naming leads to misunderstandings (GitHub Issue #231)
 - SQLiteExporter: Added export of missing entity properties
   (SportType.SpeedMode and Equipment.notInUse)
 - updated commons-cli to version 1.4
 - updated sqlite-jdbc 3.34.0
 - updated JUnit 5 to version 5.7.1
 - updated Mockito to version 3.8.0
 - use of new Java language features, introduced from Java 12 to Java 16
   - JEP 286: Local-Variable Type Inference